# heartbeat_project

./: README.md  app.py  conftest.py  measurements.csv  pyproject.toml
heartbeat/: __init__.py  algorithms.py  charts.py  detection.py  haar_detection.py  logging_utils.py  mediapipe_landmarks.py  webcam.py
static/: style.css
templates/: debug_roi.html  index.html  webcam.html
tests/: conftest.py  test_algorithms.py  test_app.py  test_charts.py  test_crop_to_size.py  test_detection.py  test_webcam.py
video_tools/: crop_to_size.py
