[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heartbeat"
version = "0.1.0"
description = "Remote heart-rate estimation from face video (rPPG)"
requires-python = ">=3.9"
dependencies = [
    "opencv-contrib-python",
    "numpy",
    "mediapipe",
]

[project.optional-dependencies]
web = ["flask"]
test = ["pytest"]

[tool.setuptools]
packages = ["heartbeat"]
